@@ -33,6 +33,13 @@ extends IMP_Maillog_Log_Base
     protected $_msgId;
 
     /**
+     * Message ID header label.
+     *
+     * @var string
+     */
+    protected $_msgidHeader = 'Message-ID';
+
+    /**
      * Constructor.
      *
      * @param array $params  Parameters:
@@ -73,27 +80,34 @@ extends IMP_Maillog_Log_Base
     /**
      * Return the mailboxes that can be searched to find the sent message.
      *
-     * @return array  Array of arrays; each array is a group of mailboxes to
-     *                search in order of priority.
+     * @return array  Array of mailboxes to search in order of priority.
      */
     public function searchMailboxes()
     {
-        $out = array();
-
         $special = IMP_Mailbox::getSpecialMailboxes();
 
         /* Check for sent-mail mailbox(es) first. */
-        if (!empty($special[IMP_Mailbox::SPECIAL_SENT])) {
-            $out[] = $special[IMP_Mailbox::SPECIAL_SENT];
-        }
+        $out = $special[IMP_Mailbox::SPECIAL_SENT];
 
         /* Add trash mailbox as backup. */
         if (!empty($special[IMP_Mailbox::SPECIAL_TRASH]) &&
             !$special[IMP_Mailbox::SPECIAL_TRASH]->vtrash) {
-            $out[] = array($special[IMP_Mailbox::SPECIAL_TRASH]);
+            $out[] = $special[IMP_Mailbox::SPECIAL_TRASH];
         }
 
         return $out;
+    }
+
+    /**
+     * Return the search query to use to find the sent message.
+     *
+     * @return Horde_Imap_Client_Search_Query  The query object.
+     */
+    public function searchQuery()
+    {
+        $query = new Horde_Imap_Client_Search_Query();
+        $query->headerText($this->_msgidHeader, $this->msg_id);
+        return $query;
     }
 
 }
