@@ -22,7 +22,7 @@
   <email>chuck@horde.org</email>
   <active>no</active>
  </lead>
- <date>2015-03-06</date>
+ <date>2015-03-09</date>
  <version>
   <release>7.0.0</release>
   <api>7.0.0</api>
@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Sent-mail maillog entries are now linked to a viewable representation of the sent message, if it still exists on the server.
 * [mms] Store message ID of the sent message when saving maillog history.
 * [mms] Add backend configuration option to use body structure data to more accurately determine whether a message contains attachments.
 * [jan] Show warning on S/MIME page if personal certificate has expired.
@@ -145,6 +146,7 @@
     <file name="editor.js" role="horde" />
     <file name="imp.js" role="horde" />
     <file name="login.js" role="horde" />
+    <file name="maillog.js" role="horde" />
     <file name="message.js" role="horde" />
     <file name="passphrase.js" role="horde" />
     <file name="search.js" role="horde" />
@@ -259,6 +261,7 @@
      <file name="Base.php" role="horde" />
      <file name="Compose.php" role="horde" />
      <file name="Mailbox.php" role="horde" />
+     <file name="Maillog.php" role="horde" />
      <file name="Message.php" role="horde" />
     </dir> <!-- /lib/Dynamic -->
     <dir name="Factory">
@@ -1540,6 +1543,7 @@
    <install as="imp/js/editor.js" name="js/editor.js" />
    <install as="imp/js/imp.js" name="js/imp.js" />
    <install as="imp/js/login.js" name="js/login.js" />
+   <install as="imp/js/maillog.js" name="js/maillog.js" />
    <install as="imp/js/message.js" name="js/message.js" />
    <install as="imp/js/passphrase.js" name="js/passphrase.js" />
    <install as="imp/js/search.js" name="js/search.js" />
@@ -1656,6 +1660,7 @@
    <install as="imp/lib/Dynamic/Base.php" name="lib/Dynamic/Base.php" />
    <install as="imp/lib/Dynamic/Compose.php" name="lib/Dynamic/Compose.php" />
    <install as="imp/lib/Dynamic/Mailbox.php" name="lib/Dynamic/Mailbox.php" />
+   <install as="imp/lib/Dynamic/Maillog.php" name="lib/Dynamic/Maillog.php" />
    <install as="imp/lib/Dynamic/Message.php" name="lib/Dynamic/Message.php" />
    <install as="imp/lib/Dynamic/Compose/Common.php" name="lib/Dynamic/Compose/Common.php" />
    <install as="imp/lib/Dynamic/Helper/Base.php" name="lib/Dynamic/Helper/Base.php" />
